# lom

./: .gitattributes  .gitignore  CMakeLists.txt
.github/workflows/: build-test.yml
docs/: README.md  message colours.md
gamedata/misc/: weather.yml
gamedata/world/regions/: 0-sula.yml  1-westgate.yml
src/: main.cpp
src/actions/: cheats.cpp  meta.cpp  meta.hpp  silly.cpp  silly.hpp  world-interaction.cpp  world-interaction.hpp
src/cmake/: source.hpp.in  version.hpp.in
src/core/: core.cpp  core.hpp  game.cpp  game.hpp  global.hpp  pch.hpp  terminal.cpp  terminal.hpp
src/core/global/: global-includes.hpp  terminal.cpp  terminal.hpp
src/misc/: namegen.cpp  namegen.hpp
src/parser/: cheats.cpp  cheats.hpp  meta.cpp  meta.hpp  parser-macros.hpp  parser.cpp  parser.hpp  silly.cpp  silly.hpp  world-interaction.cpp  world-interaction.hpp  world.cpp  world.hpp
src/util/file/: binpath.cpp  binpath.hpp  filereader.cpp  filereader.hpp  fileutils.hpp  filewriter.cpp  filewriter.hpp  yaml.cpp  yaml.hpp
src/util/math/: random.hpp  vector2.hpp  vector3.hpp
src/util/text/: hash.hpp  namegen.cpp  namegen.hpp  stringutils.cpp  stringutils.hpp
src/world/: codex.hpp  world.cpp  world.hpp
src/world/area/: automap.cpp  automap.hpp  link.cpp  link.hpp  region.cpp  region.hpp  room.cpp  room.hpp
src/world/entity/: entity.cpp  entity.hpp  mobile.cpp  mobile.hpp  player.cpp  player.hpp
src/world/time/: time-weather.cpp  time-weather.hpp  timing.hpp
